# Alex

./: .dockerignore  .env.example  .env.livekit.example  .gitignore  CLAUDE.md  Dockerfile  LIVEKIT_README.md  README.md  deploy.sh  docker-compose.yml  livekit_test.html  pyproject.toml  test_streaming.html
app/: livekit_agent.py  main.py  voice_health.py
app/config/: settings.py
app/core/: formatting.py  logging.py  retry.py
app/models/: openai_patch.py
app/services/: __init__.py  agno_service.py  diagnostics_service.py  livekit_agno_plugin.py  pm_schedule_service.py
app/tools/: s3_search.py  search.py  send_document.py  sql_tool.py
docs/: document-webhook.md  frontend-markdown-rendering.md  livekit-token.md
tests/: conftest.py  test_agno_service.py  test_diagnostics_service.py  test_endpoints.py  test_logging.py  test_pm_schedule_service.py  test_prefetch_integration.py  test_retry.py  test_s3_search.py  test_send_document.py  test_sql_tool.py  test_voice_health.py
